Fix: Applies full width to details table display Details table display was previously limited to 640px width
This change removes this restriction, and adds horizontal scrolling

In reference to https://trello.com/c/dDBNxe1O/800-table-cropping-glitch-on-view-measures-workbasket

--- a/app/assets/stylesheets/components/create-measures.scss
+++ b/app/assets/stylesheets/components/create-measures.scss
@@ -31,8 +31,7 @@ span.create-measures-sub_header {
 
 .create-measures-details-table {
   margin-bottom: 60px;
-  overflow: hidden;
-  width: 640px;
+  overflow: scroll;
 
   td {
     font-size: 16px;
